[package]
name = "radamsa-sys"
description = "Rust bindings for Radamsa"
version = "0.1.0"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
keywords = ["bindings", "black-box", "fuzzing", "radamsa"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/langston-barrett/radamsa-sys"
repository = "https://github.com/langston-barrett/radamsa-sys"

[build-dependencies]
bindgen = "0.66"
